--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 @font-face {
   font-family: 'Roboto';
   src: url('../fonts/Roboto-Medium.woff2') format('woff2'),
-      url('../fonts/Roboto-Medium.woff') format('woff');
+  url('../fonts/Roboto-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -11,7 +11,7 @@
 @font-face {
   font-family: 'Roboto';
   src: url('../fonts/Roboto-Regular.woff2') format('woff2'),
-      url('../fonts/Roboto-Regular.woff') format('woff');
+  url('../fonts/Roboto-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -20,7 +20,7 @@
 @font-face {
   font-family: 'Roboto';
   src: url('../fonts/Roboto-Bold.woff2') format('woff2'),
-      url('../fonts/Roboto-Bold.woff') format('woff');
+  url('../fonts/Roboto-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -95,7 +95,102 @@ select:-webkit-autofill:focus {
   padding-right: 24px;
   margin-right: auto;
   margin-left: auto;
+
+
+  /* border: 3px solid red; */
 }
+
+/* ** BUTTON ** */
+.button{
+  color: #FFF;
+  background-color: #0082F4;
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  display: inline-block;
+  padding: 14px 28px;
+  border: 2px solid transparent;
+  text-align: center;
+  white-space: nowrap;
+  border-radius: 6px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: 0.4s ease;
+}
+.button:hover{
+  background-color: #FFF;
+  color: #0082F4;
+  border-color: #0082F4;
+}
+.button:active{
+  opacity: 0.6;
+}
+/* ** LOGO ** */
+.logo {
+  display: flex;
+  flex-shrink: 0;
+}
+.logo:hover{
+  opacity: 0.8;
+}
+.logo:active{
+  opacity: 0.6;
+}
+.logo__img {
+  width: 70px;
+  height: 70px;
+}
+/* * * SITE HEADER * * */
+.site-header__container {
+  display: flex;
+  align-items: center;
+}
+.site-header__logo {
+  margin-right: 300px;
+}
+/* Sitenav */
+.sitenav {
+  margin-right: auto;
+}
+.sitenav__list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.sitenav__item:not(:last-child) {
+  margin-right: 40px;
+}
+
+/* * Sitenav Link * */
+.sitenav__link {
+  display: block;
+  text-decoration: none;
+  font-weight: normal;
+  padding-top: 50px;
+  padding-bottom: 35px;
+  color: #000;
+  position: relative;
+}
+.sitenav__link:hover {
+  color: #0082F4;
+}
+.sitenav__link:hover::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #0082F4;
+  left: 0;
+  bottom: 0;
+}
+.sitenav__link:active{
+  opacity: 0.6;
+}
+
+
 
 /* ** MAIN CONTENT ** */
 .main-content
