--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ select:-webkit-autofill:focus {
   border: 2px solid transparent;
   text-align: center;
   white-space: nowrap;
-  border-radius: 6px;
+  border-radius: 10px;
   text-decoration: none;
   cursor: pointer;
   transition: 0.4s ease;
@@ -126,6 +126,27 @@ select:-webkit-autofill:focus {
 }
 .button:active{
   opacity: 0.6;
+}
+.button--white{
+  background-color: #FFF;
+  color: #0082F4;
+  border: 2px solid rgb(0, 130, 244, 0.2);
+  padding: 15px 34px;
+}
+.button__inner {
+  display: flex;
+  align-items: center;
+}
+.button--hero{
+  padding: 18px 45px;
+}
+
+.button--white:hover{
+  border-color: #0082F4;
+}
+.button__icon {
+  display: flex;
+  margin-right: 15px;
 }
 /* ** LOGO ** */
 .logo {
@@ -189,11 +210,54 @@ select:-webkit-autofill:focus {
 .sitenav__link:active{
   opacity: 0.6;
 }
-
-
-
 /* ** MAIN CONTENT ** */
 .main-content
 {
   flex-grow: 1;
+}
+/* HERO */
+.hero {
+  position: relative;
+  padding-top: 160px;
+  padding-bottom: 100px;
+  background-image: url(../img/hero-bg.svg);
+  background-repeat: no-repeat;
+  background-position: calc(50% + 330px) 90px;
+}
+.hero__inner {
+  display: flex;
+  flex-direction: column;
+  max-width: 530px;
+  width: 100%;
+}
+.hero__title {
+  font-size: 61px;
+  font-weight: 700;
+  line-height: 79px;
+  text-align: left;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+.hero__title-colored-part{
+  color: #0082F4;
+}
+.hero__supplement {
+  color: #0080FD;
+  font-size: 25px;
+  font-style: normal;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 5px;
+  order: -1;
+}
+.hero__text {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+.hero__button-wrapper {
+  display: flex;
+}
+.hero__button-wrapper-item:not(:last-child){
+  margin-right: 30px;
 }
