--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* ** GLOBAL STYLES ** */
+/* ** FONT FACE ** */
 @font-face {
   font-family: 'Roboto';
   src: url('../fonts/Roboto-Medium.woff2') format('woff2'),
@@ -102,6 +102,7 @@ select:-webkit-autofill:focus {
 
 /* ** BUTTON ** */
 .button{
+  display: block;
   color: #FFF;
   background-color: #0082F4;
   font-family: Roboto;
@@ -188,6 +189,8 @@ select:-webkit-autofill:focus {
 /* * Sitenav Link * */
 .sitenav__link {
   display: block;
+  font-size: 20px;
+  line-height: 23px;
   text-decoration: none;
   font-weight: normal;
   padding-top: 50px;
@@ -260,4 +263,55 @@ select:-webkit-autofill:focus {
 }
 .hero__button-wrapper-item:not(:last-child){
   margin-right: 30px;
+}
+
+/* ** ABOUT US ** */
+.about-us {
+  padding-top: 130px;
+  padding-bottom: 100px;
+}
+.about-us__container {
+  display: flex;
+  justify-content: space-between;
+}
+.about-us__img {
+  display: flex;
+  width: 486px;
+  height: 486px;
+  margin-right: 40px;
+}
+.about-us__content-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  max-width: 500px;
+  width: 100%;
+  padding-bottom: 30px;
+}
+.about-us__title {
+  font-size: 49px;
+  font-weight: 700;
+  line-height: 64px;
+  text-align: left;
+  margin-top: 0;
+  letter-spacing: -0.01px;
+  margin-bottom: 20px;
+}
+.about-us__supplement {
+  font-size: 25px;
+  font-weight: 500;
+  line-height: 29px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #0082F4;
+  margin-top: 0;
+  margin-bottom: 5px;
+  order: -1;
+}
+.about-us__text {
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
 }
