--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ body
   letter-spacing: 0.5px;
   background-color: #fff;
   color: #000;
+  overflow-x: hidden;
 }
 img
 {
@@ -366,4 +367,104 @@ select:-webkit-autofill:focus {
   line-height: 30px;
   text-align: center;
   margin: 0;
+}
+
+/* ** OUR CUSTOMERS ** */
+.customers {
+  padding-top: 60px;
+  padding-bottom: 175px;
+}
+.customers__container{
+  position: relative;
+}
+.customers__title {
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 73px;
+  text-align: left;
+  margin-top: 0;
+  margin-bottom: 60px;
+}
+.customers__control {
+  position: absolute;
+  top: 0;
+  right: 0;
+  max-width: 140px;
+  display: flex;
+}
+.customers__control-item{
+  display: flex;
+  text-decoration: none;
+}
+.customers__control-item:hover{
+  opacity: 0.8;
+}
+.customers__control-item:active{
+  opacity: 0.6;
+}
+.customers__control-item:not(:last-child) {
+  margin-right: 40px;
+}
+.customers__control-item-left {
+  transform: rotateY(-180deg);
+}
+.customers__control-item-img {
+  width: 50px;
+  height: 50px;
+}
+
+.customers__card-wrapper {
+  display: flex;
+}
+.customer__card {
+  max-width: 420px;
+  width: 100%;
+  padding: 30px 30px 30px 127px;
+  border: 1px solid rgb(0, 130, 244, 0.2);
+  border-radius: 10px;
+  background-image: url(../img/customer-card-bg.svg);
+  background-repeat: no-repeat;
+}
+.customer__card:not(:last-child){
+  margin-right: 70px;
+}
+.customer {
+  position: relative;
+}
+.customer__img {
+  position: absolute;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  top: calc(50% - 32px);
+  left: 30px;
+}
+.customer__opinion {
+  font-size: 20px;
+  line-height: 30px;
+  text-align: left;
+  margin-top: 0;
+  margin-bottom: 45px;
+}
+.customer__name {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: left;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.customer__name::before{
+  display: flex;
+  width: 30px;
+  height: 3px;
+  background-color: rgb(0, 0, 0, 0.7);
+  content: "";
+  margin-right: 10px;
+}
+.customer__occupation {
+  padding-left: 40px;
+  font-size: 20px;
+  line-height: 24px;
+  color: rgb(0, 0, 0, 0.5);
 }
