--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+/* ** CUSTOM PROPERTIES ** */
+:root{
+  --accent-color: #0082F4;
+  --white: #fff;
+  --black: #000;
+}
 /* ** FONT FACE ** */
 @font-face {
   font-family: 'Roboto';
@@ -52,8 +58,8 @@ body
   line-height: 1.5;
   font-family: 'Roboto', Arial, sans-serif;
   letter-spacing: 0.5px;
-  background-color: #fff;
-  color: #000;
+  background-color: var(--white);
+  color: var(--black);
   overflow-x: hidden;
 }
 img
@@ -92,8 +98,8 @@ select:-webkit-autofill:focus {
 {
   width: 100%;
   max-width: 1200px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-left: 25px;
+  padding-right: 25px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -101,8 +107,8 @@ select:-webkit-autofill:focus {
 /* ** BUTTON ** */
 .button{
   display: block;
-  color: #FFF;
-  background-color: #0082F4;
+  color: var(--white);
+  background-color: var(--accent-color);
   font-family: Roboto;
   font-size: 20px;
   font-style: normal;
@@ -120,16 +126,16 @@ select:-webkit-autofill:focus {
   transition: 0.4s ease;
 }
 .button:hover{
-  background-color: #FFF;
-  color: #0082F4;
-  border-color: #0082F4;
+  background-color: var(--white);
+  color: var(--accent-color);
+  border-color: var(--accent-color);
 }
 .button:active{
   opacity: 0.6;
 }
 .button--white{
-  background-color: #FFF;
-  color: #0082F4;
+  background-color: var(--white);
+  color: var(--accent-color);
   border: 2px solid rgb(0, 130, 244, 0.2);
   padding: 15px 34px;
 }
@@ -142,7 +148,7 @@ select:-webkit-autofill:focus {
 }
 
 .button--white:hover{
-  border-color: #0082F4;
+  border-color: var(--accent-color);
 }
 .button__icon {
   display: flex;
@@ -194,18 +200,18 @@ select:-webkit-autofill:focus {
   font-weight: normal;
   padding-top: 50px;
   padding-bottom: 35px;
-  color: #000;
+  color: var(--black);
   position: relative;
 }
 .sitenav__link:hover {
-  color: #0082F4;
+  color: var(--accent-color);
 }
 .sitenav__link:hover::after {
   position: absolute;
   content: "";
   width: 100%;
   height: 2px;
-  background-color: #0082F4;
+  background-color: var(--accent-color);
   left: 0;
   bottom: 0;
 }
@@ -241,7 +247,7 @@ select:-webkit-autofill:focus {
   margin-bottom: 20px;
 }
 .hero__title-colored-part{
-  color: #0082F4;
+  color: var(--accent-color);
 }
 .hero__supplement {
   color: #0080FD;
@@ -302,7 +308,7 @@ select:-webkit-autofill:focus {
   line-height: 29px;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: #0082F4;
+  color: var(--accent-color);;
   margin-top: 0;
   margin-bottom: 5px;
   order: -1;
@@ -432,7 +438,7 @@ select:-webkit-autofill:focus {
   width: 61px;
   height: 61px;
   position: absolute;
-  border: 2px solid #fff;
+  border: 2px solid var(--white);
   border-radius: 50%;
   top: calc(50% - 32px);
   left: 30px;
@@ -544,7 +550,7 @@ select:-webkit-autofill:focus {
   font-size: 20px;
   font-weight: 400;
   line-height: 30px;
-  color: #000;
+  color: var(--black);
   text-decoration: none;
   text-transform: capitalize;
 }
@@ -552,7 +558,7 @@ select:-webkit-autofill:focus {
   margin-bottom: 15px;
 }
 .site-footer__link:hover{
-  color: #0082F4;
+  color: var(--accent-color);
 }
 .site-footer__link:active{
   opacity: 0.6;
@@ -575,7 +581,7 @@ select:-webkit-autofill:focus {
   font-size: 25px;
   font-weight: 500;
   line-height: 38px;
-  color: #000;
+  color: var(--black);
   margin: 0;
   padding: 0;
 }
@@ -583,19 +589,19 @@ select:-webkit-autofill:focus {
   font-size: 20px;
   font-weight: 400;
   line-height: 30px;
-  color: #000;
+  color: var(--black);
   text-decoration: none;
   text-transform: capitalize;
 }
 .footer-list__link:hover{
-  color: #0082F4;
+  color: var(--accent-color);
 }
 .footer-list__link:active{
   opacity: 0.6;
 }
 
 .site-footer__bottom {
-  background-color: #0082F4;
+  background-color: var(--accent-color);
   background-image: linear-gradient(180deg, #058AFF 0%, rgba(57, 55, 206, 0.87) 97.91%);
 }
 .site-footer__bottom-container {
@@ -610,7 +616,7 @@ select:-webkit-autofill:focus {
   line-height: 30px;
   margin: 0;
   margin-right: auto;
-  color: #fff;
+  color: var(--white);
 }
 .site-footer__socials-list {
   display: flex;
